--- a/A3.html
+++ b/A3.html
@@ -8,6 +8,6 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution please cgech console</h1>
+  <h1>Module 4 Solution please check console</h1>
 </body>
 </html>
